--- a/ansible/playbooks/openshift-etcd/restore.yml
+++ b/ansible/playbooks/openshift-etcd/restore.yml
@@ -2,8 +2,8 @@
   hosts: etcd
   tasks:
   - import_role:
-      name: etcd
-      tasks_from: set_facts.yml
+      name: openshift_facts
+      tasks_from: restore
   - import_role:
       name: etcd
-      tasks_from: restore.yml
+      tasks_from: restore
