--- a/ansible/playbooks/backup_cluster.yml
+++ b/ansible/playbooks/backup_cluster.yml
@@ -4,6 +4,7 @@
   - import_role:
       name: openshift_facts
       tasks_from: backup
+    delegate_to: localhost
     tags: always
 
 - include: openshift-node/backup.yml
