--- a/ansible/playbooks/backup_cluster.yml
+++ b/ansible/playbooks/backup_cluster.yml
@@ -1,9 +1,8 @@
 - name: cluster backup
-  hosts: all
+  hosts: localhost
   tasks:
   - set_fact:
       openshift_backup_date: "{{ ansible_date_time.date }}_{{ ansible_date_time.hour }}{{ ansible_date_time.minute }}{{ ansible_date_time.second }}"
-    delegate_to: localhost
   - debug:
       msg: "{{ openshift_backup_date }}"
 
