--- a/ansible/playbooks/backup_cluster.yml
+++ b/ansible/playbooks/backup_cluster.yml
@@ -1,10 +1,9 @@
 - name: cluster backup
   hosts: all
   tasks:
-  - set_fact:
-      openshift_backup_date: "{{ ansible_date_time.date }}_{{ ansible_date_time.hour }}{{ ansible_date_time.minute }}{{ ansible_date_time.second }}"
-  - debug:
-      msg: "{{ openshift_backup_date }}"
+  - import_role:
+      name: openshift_facts
+      tasks_from: backup
 
 - include: openshift-node/backup.yml
   tags: node-config
