--- a/ansible/playbooks/openshift-node/backup.yml
+++ b/ansible/playbooks/openshift-node/backup.yml
@@ -1,6 +1,12 @@
 - name: backup nodes configuration files
   hosts: nodes
   tasks:
+  - name: install required packages
+    yum:
+      name: "{{ item }}"
+      state: present
+    loop:
+    - rsync
   - name: set /etc/origin backup directory
     set_fact:
       origin_backup_dir: "{{ openshift_backup_date }}/etc-origin"
