change include by import_playbook

--- a/ansible/playbooks/backup_cluster.yml
+++ b/ansible/playbooks/backup_cluster.yml
@@ -5,7 +5,7 @@
       name: openshift_facts
       tasks_from: backup
 
-- include: openshift-node/backup.yml
+- import_playbook: openshift-node/backup.yml
   tags: node-config
-- include: openshift-etcd/backup.yml
+- import_playbook: openshift-etcd/backup.yml
   tags: etcd
