modify ansible log file

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -7,7 +7,7 @@
 
 [defaults]
 # Set the log_path
-log_path = ~/openshift-ansible.log
+log_path = ~/openshift-tools-ansible.log
 
 # Additional default options for OpenShift Ansible
 forks = 20
