--- a/ansible/playbooks/restore_cluster.yml
+++ b/ansible/playbooks/restore_cluster.yml
@@ -4,5 +4,5 @@
 - import_playbook: openshift-master/restore.yml
   tags: master
 
-- import_playbook: openshift-nodes/restore.yml
+- import_playbook: openshift-node/restore.yml
   tags: node
