--- a/ansible/roles/openshift_master/tasks/restore.yml
+++ b/ansible/roles/openshift_master/tasks/restore.yml
@@ -1,11 +1,20 @@
 - include_tasks: prereqs.yml
 
+#TODO: delete this or not?
+#- name: restore /etc/origin/master/ files
+#  synchronize:
+#    src: "{{ backup_srv_path }}/{{ inventory_hostname }}/{{ origin_master_config_dir }}/"
+#    dest: "/etc/origin/master/"
+#    archive: false
+#    recursive: true
+
 - name: restore /etc/origin/master/ files
   synchronize:
-    src: "{{ backup_srv_path }}/{{ inventory_hostname }}/{{ origin_backup_dir }}/master/{{ item }}"
+    src: "{{ backup_srv_path }}/{{ inventory_hostname }}/{{ origin_master_config_dir }}/{{ item }}"
     dest: "/etc/origin/master/{{ item }}"
     archive: false
     recursive: true
+    links: true
   loop:
   - master-config.yaml
   - master.env
