--- a/ansible/roles/deploy_cluster_logging/tasks/create_namespaces.yaml
+++ b/ansible/roles/deploy_cluster_logging/tasks/create_namespaces.yaml
@@ -4,8 +4,15 @@
     path: "{{ cluster_logging_manifests_dir_path }}"
     state: directory
 
-- name: "create {{ item }} namespace yaml file"
+- name: "create namespace yaml files"
   template:
     src: "{{ item }}.yaml.j2"
     dest: "{{ cluster_logging_manifests_dir_path }}/{{ item }}.yaml"
+  loop: "{{ cluster_logging_manifest_filenames }}"
+
+- name: "create namespaces"
+  k8s:
+    kubeconfig: "{{ openshift_kubeconfig_path }}"
+    src: "{{ cluster_logging_manifests_dir_path }}/{{ item }}.yaml"
+    state: present
   loop: "{{ cluster_logging_manifest_filenames }}"
