--- a/ansible/roles/deploy_cluster_logging/tasks/install_elasticsearch_operator.yaml
+++ b/ansible/roles/deploy_cluster_logging/tasks/install_elasticsearch_operator.yaml
@@ -7,6 +7,12 @@
   set_fact:
     elasticsearch_operator_channel: "{{ r_elasticsearch_operator_channel.stdout }}"
 
+- debug:
+    msg: "{{ r_elasticsearch_operator_channel.stdout }}"
+
+- debug:
+    var: elasticsearch_operator_channel
+
 - name: "create Elasticsearch manifest files"
   template:
     src: "{{ item }}.yaml.j2"
