--- a/ansible/roles/deploy_cluster_logging/defaults/main.yaml
+++ b/ansible/roles/deploy_cluster_logging/defaults/main.yaml
@@ -11,14 +11,6 @@ cluster_logging_manifest_filenames:
   - "elasticsearch_operator-namespace"
   - "openshift_logging-namespace"
 
-# Openshift Logging default vars
-
-openshift_logging_namespace:
-  name: "openshift-logging"
-  labels:
-    - 'openshift.io/cluster-logging: "true"'
-    - 'openshift.io/cluster-monitoring: "true"'
-
 # Elasticsearch default vars
 elasticsearch_operator_manifest_filenames:
   - "elasticsearch_operator-namespace"
@@ -35,7 +27,13 @@ elasticsearch_operator_namespace:
 
 elasticsearch_operator_operatorgroup:
   name: elasticsearch-operator
-  spec:
-    targetNamespaces:
-    - "elasticsearch-operator"
-    - "{{ openshift_logging_namespace.name }}"
+
+elasticsearch_operator_subscription:
+  name: elasticsearch-subscription
+# Openshift Logging default vars
+
+openshift_logging_namespace:
+  name: "openshift-logging"
+  labels:
+    - 'openshift.io/cluster-logging: "true"'
+    - 'openshift.io/cluster-monitoring: "true"'
