deploy_cluster_logging role: import install_cluster_logging_operator

--- a/ansible/roles/deploy_cluster_logging/defaults/main.yaml
+++ b/ansible/roles/deploy_cluster_logging/defaults/main.yaml
@@ -4,16 +4,14 @@ openshift_kubeconfig_path: "{{ ansible_env.HOME }}/.kube/config"
 
 openshift_marketplace_namespace: "openshift-marketplace"
 
-# Cluster logging default vars
-
-cluster_logging_manifests_dir_path: "{{ ansible_env.HOME }}/cluster_logging_manifests"
-cluster_logging_manifest_filenames:
+# OpenShift cluster logging default vars
+openshift_cluster_logging_manifests_dir_path: "{{ ansible_env.HOME }}/cluster_logging_manifests"
+openshift_cluster_logging_manifest_filenames:
   - "elasticsearch_operator-namespace"
   - "openshift_logging-namespace"
 
 # Elasticsearch default vars
 elasticsearch_operator_manifest_filenames:
-  - "elasticsearch_operator-namespace"
   - "elasticsearch_operator-operatorgroup"
   - "elasticsearch_operator-subscription"
   - "elasticsearch_operator-role"
@@ -30,11 +28,25 @@ elasticsearch_operator_operatorgroup:
 
 elasticsearch_operator_subscription:
   name: elasticsearch-subscription
-  
-# Openshift Logging default vars
 
-openshift_logging_namespace:
+# Cluster Logging default vars
+cluster_logging_operator_manifest_filenames:
+  - "cluster_logging_operator-operatorgroup"
+  - "cluster_logging_operator-subscription"
+  - "cluster_logging_operator-role"
+  - "cluster_logging_operator-rolebinding"
+
+cluster_logging_operator_namespace:
   name: "openshift-logging"
   labels:
     - 'openshift.io/cluster-logging: "true"'
     - 'openshift.io/cluster-monitoring: "true"'
+
+cluster_logging_operator_operatorgroup:
+  name: "{{ cluster_logging_operator_namespace.name }}-operatorgroup"
+  spec:
+    targetNamespaces:
+    - "{{ cluster_logging_operator_namespace.name }}"
+
+cluster_logging_operator_subscription:
+  name: "{{ cluster_logging_operator_namespace.name }}-subscription"
