--- a/ansible/roles/deploy_cluster_logging/tasks/main.yaml
+++ b/ansible/roles/deploy_cluster_logging/tasks/main.yaml
@@ -2,3 +2,4 @@
 - import_tasks: create_namespaces.yaml
 - import_tasks: install_elasticsearch_operator.yaml
 - import_tasks: install_cluster_logging_operator.yaml
+- import_tasks: create_cluster_logging_instance.yaml
